New contextual completions (and hex helper)